--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: clojure
 lein: lein2
 jdk:
-  - openjdk7
-  - openjdk6
+- openjdk7
+- openjdk6
+
+notifications:
+  hipchat:
+    secure: xxEAdmL2os+XwhCiHm2bTOoAkCD5Wnf1o7OE5jZq9ioSy4jrGvDSFJ9bFFlj26/M8RZXYcDKAMtInB6bUuMVgkEKwrpnMCrMGAtOrJRN8zjM/McOI+As2jJF/VYCpJA4iECFnyrBAnW/MFMcR+j0bGDq5RETTKsp+Rrg4POpnUw=
+
